<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">InterviewKu</string>

    <!--  STATIC TEXT / TITLE / PLACEHOLDER  -->
    <string name="abort">Batal</string>
    <string name="additional_information">Informasi Tambahan</string>
    <string name="answer">Jawaban</string>
    <string name="birthdate">Tanggal Lahir</string>
    <string name="change_password">Ganti Kata Sandi</string>
    <string name="chatbot">Chatbot</string>
    <string name="chatbot_history">Riwayat Chat</string>
    <string name="chatbot_result">Hasil Chatbot</string>
    <string name="check_mic_start">Rekam suara anda</string>
    <string name="check_mic_stop">Berhenti merekam</string>
    <string name="check_tts_feature">Cek Fitur TTS</string>
    <string name="choose_your_interest">Pilih Minat Anda</string>
    <string name="current_city">Kota Domisili</string>
    <string name="download">Unduh</string>
    <string name="download_tts_data_title">Unduh Data TTS</string>
    <string name="email">Email</string>
    <string name="error_title">Terjadi Kesalahan</string>
    <string name="exit">Keluar</string>
    <string name="exit_from_session">Keluar dari sesi</string>
    <string name="feedback">Umpan Balik</string>
    <string name="firstname">Nama Depan</string>
    <string name="forgot_password_text">Lupa Kata Sandi ?</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="interview_history">Riwayat Interview</string>
    <string name="interview_instruction_title">Instruksi</string>
    <string name="interview_performance_title">Performa</string>
    <string name="interview_result">Hasil Interview</string>
    <string name="interview_test">Uji Kemampuan</string>
    <string name="interview_test_try">Coba Uji Kemampuan</string>
    <string name="interview_tips_title">Tips Interview</string>
    <string name="interview_train">Latihan</string>
    <string name="interview_train_try">Coba Latihan</string>
    <string name="job_position">Bidang Pekerjaan yang diinginkan</string>
    <string name="landing_asset_attribution">Image by Freepik</string>
    <string name="lastname">Nama Belakang (opsional)</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="microphone_check">Cek Mikrofon</string>
    <string name="navigation_account">Akun</string>
    <string name="navigation_home">Beranda</string>
    <string name="navigation_interview">Interview</string>
    <string name="navigation_tips">Tips</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="next">Lanjut</string>
    <string name="no">Tidak</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="otp_code">Kode OTP</string>
    <string name="otp_code_correct">Kode OTP Benar</string>
    <string name="otp_sending_success">Kode OTP Berhasil Dikirim</string>
    <string name="password">Kata Sandi</string>
    <string name="password_change_success">Kata Sandi berhasil diubah</string>
    <string name="password_recovery">Pemulihan Kata Sandi</string>
    <string name="password_recovery_success">Kata Sandi berhasil dipulihkan</string>
    <string name="permission_title">Perizinan Aplikasi</string>
    <string name="profile">Profil</string>
    <string name="question">Pertanyaan</string>
    <string name="ready">Siap</string>
    <string name="register">Daftar</string>
    <string name="reinit_tts">Inisialisasi Ulang TTS</string>
    <string name="save">Simpan</string>
    <string name="scoring_detail">Detail Penilaian</string>
    <string name="select_job_field_title">Pilih Bidang Pekerjaan</string>
    <string name="send_question">Kirim Pertanyaan</string>
    <string name="send_recovery_email">Kirim Email Pemulihan</string>
    <string name="start_test">Mulai Uji Kemampuan</string>
    <string name="start_train">Mulai Latihan</string>
    <string name="try_again">Coba Lagi</string>
    <string name="tts_feature">Fitur Text to Speech (TTS)</string>
    <string name="tts_sample_sound">Ini adalah sampel suara dari TTS</string>
    <string name="welcome">Selamat datang di InterviewKu</string>
    <string name="yes">Ya</string>

    <!--  MESSAGE / INSTRUCTION  -->
    <string name="abort_recovery_confirmation">Apakah yakin ingin membatalkan pemulihan kata sandi?</string>
    <string name="abort_recovery_title">Batalkan Pemulihan</string>
    <string name="check_mic_instruction">Suara akan langsung diputar setelah perekaman berhenti</string>
    <string name="continue_to_test">Lanjutkan ke Uji Kemampuan</string>
    <string name="download_tts_data_explanation">Untuk melanjutkan, Anda harus mengunduh data bahasa Indonesia pada Google TTS</string>
    <string name="email_invalid">Email Tidak Valid</string>
    <string name="end_interview_failed">Gagal mengakhiri sesi (%s). Silahkan coba lagi</string>
    <string name="fetch_new_data_failed">Terjadi kesalahan saat mengambil data terbaru (%s)</string>
    <string name="firstname_empty">Harap mengisi nama depan anda</string>
    <string name="home_load_failed">Terdapat kesalahan dalam memuat data beranda (%s). Silahkan coba lagi nanti</string>
    <string name="interview_exit_confirm">Apakah anda yakin ingin keluar? Sesi akan dianggap tidak selesai</string>
    <string name="interview_finished">Sesi Interview telah selesai!</string>
    <string name="interview_not_finished">Sesi tidak selesai</string>
    <string name="interview_not_finished_description">Silahkan mencoba sesi baru untuk memperoleh nilai keseluruhan</string>
    <string name="interview_test_screen_instruction">Mohon berfokus pada pertanyaan yang diberikan</string>
    <string name="login_instruction">Silahkan masuk ke akun anda</string>
    <string name="logout_confirmation">Anda yakin ingin keluar?</string>
    <string name="logout_success">Berhasil keluar dari akun anda</string>
    <string name="mic_permission_granted">Anda dapat merekam suara anda sekarang</string>
    <string name="mic_permission_prompt">Izin merekam suara wajib diberikan agar fitur perekaman dapat digunakan</string>
    <string name="no_chat_history">Anda belum pernah bertanya kepada Chatbot sebelumnya</string>
    <string name="no_google_tts">Silahkan mengunduh Google TTS di Play Store untuk menggunakan fitur interview</string>
    <string name="no_indonesian_tts_data">Anda belum memasang data suara Bahasa Indonesia. Silahkan memasang data suara Bahasa Indonesia</string>
    <string name="no_interview_history">Anda belum pernah melakukan Interview</string>
    <string name="no_tts_data">Anda tidak memiliki data suara. Silahkan memasang data suara Bahasa Indonesia</string>
    <string name="otp_invalid">Kode OTP tidak valid</string>
    <string name="password_invalid">Password harus minimal 8 karakter, terdapat 1 huruf kapital, dan 1 karakter simbol</string>
    <string name="please_choose">Silahkan pilih</string>
    <string name="prepare_interview_failed">Gagal mempersiapkan sesi (%s). Silahkan coba lagi</string>
    <string name="question_instruction">Silahkan bertanya kepada Chatbot</string>
    <string name="question_not_answered">Pertanyaan tidak dijawab. Silahkan mencoba lagi pada sesi baru.</string>
    <string name="record_failed">Gagal memulai perekaman suara. Pastikan tidak ada aplikasi lain yang menggunakan mikrofon</string>
    <string name="register_detail_instruction">Silahkan masukkan informasi tambahan terkait diri anda</string>
    <string name="register_instruction">Silahkan masukkan informasi berikut untuk mendaftarkan diri</string>
    <string name="reload_instruction">Silahkan muat ulang untuk memperoleh data terbaru</string>
    <string name="start_interview_failed">Gagal memulai sesi (%s). Silahkan coba lagi</string>
    <string name="start_other_session">Mulai sesi Uji Kemampuan lainnya</string>
    <string name="submit_answer_failed">Gagal mengirim jawaban (%s). Silahkan coba lagi</string>
    <string name="test_instruction">Soal hanya akan dibacakan melalui fitur Text To Speech (TTS). Sehingga anda harus fokus\nDiharapkan anda juga mengatur volume suara agar pertanyaan dapat didengar dengan baik\nSetelah pembacaan soal, jawaban akan otomatis direkam saat indikator mikrofon menyala\nPerekaman akan dihentikan dan jawaban akan dikirim saat anda memilih lanjut ke pertanyaan selanjutnya\nAnda juga dapat memilih untuk mengulang pertanyaan dan mengulang kembali jawaban anda (dapat mempengaruhi skor anda)\nWaktu maksimal per jawaban adalah 2 menit dan jawaban akan otomatis dikirim jika telah sampai batas waktu</string>
    <string name="test_overview">Mode ini ditujukan untuk menguji kemampuan interview berdasarkan pengalaman nyata</string>
    <string name="train_instruction">Soal akan dibacakan melalui fitur Text To Speech (TTS) dan ditampilkan di layar\nDiharapkan anda juga mengatur volume suara agar pertanyaan dapat didengar dengan baik\nTombol mikrofon dapat digunakan untuk memulai perekaman jawaban dan menghentikan perekaman\nSetelah itu, Anda bisa memilih untuk merekam ulang jawaban atau mengirim jawaban yang sudah direkam\nWaktu maksimal per jawaban adalah 2 menit dan perekaman akan dihentikan jika telah sampai batas waktu</string>
    <string name="train_overview">Mode ini ditujukan untuk melatih kemampuan interview dengan soal yang lebih sedikit dan dapat dibaca</string>
    <string name="tts_init_failed">Silahkan mengecek kembali fitur Google TTS di perangkat anda dan coba untuk menginisialisasi ulang</string>
    <string name="tts_not_initialized">TTS belum diinisialisasi</string>
    <string name="unexpected_error">Terjadi kesalahan. Silahkan coba lagi</string>
    <string name="user_profile_saved">Perubahan informasi pengguna telah disimpan</string>

    <!--  TEMPLATE  -->
    <string name="author_template">Dibuat oleh: %s</string>
    <string name="created_at_template">Dibuat pada: %s</string>
    <string name="duration_label_template">Durasi: %s</string>
    <string name="duration_template" tools:ignore="PluralsCandidate">%02d Menit %02d Detik</string>
    <string name="first_last_name_template">%s %s</string>
    <string name="home_greeting_template">Halo, %s!</string>
    <string name="job_field_template">Bidang Pekerjaan: %s</string>
    <string name="mode_template">Mode %s</string>
    <string name="question_order_template">Pertanyaan %d / %d</string>
    <string name="retry_count_template" tools:ignore="PluralsCandidate">%d kali</string>
    <string name="source_template">Sumber: %s</string>
    <string name="started_at_template">Waktu: %s</string>
    <string name="tts_status_template">Status: %s</string>

</resources>