<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.capstone.interviewku.ui.fragments.home.HomeFragment"
        android:label="@string/navigation_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_interview"
        android:name="com.capstone.interviewku.ui.fragments.interview.InterviewFragment"
        android:label="@string/navigation_interview"
        tools:layout="@layout/fragment_interview" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.capstone.interviewku.ui.fragments.chat.ChatbotFragment"
        android:label="@string/chatbot"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/navigation_tips"
        android:name="com.capstone.interviewku.ui.fragments.tips.TipsFragment"
        android:label="@string/navigation_tips"
        tools:layout="@layout/fragment_tips" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.capstone.interviewku.ui.fragments.account.AccountFragment"
        android:label="@string/navigation_account"
        tools:layout="@layout/fragment_account" />
</navigation>